--- a/lib/web/templates/layout/admin.html.eex
+++ b/lib/web/templates/layout/admin.html.eex
@@ -9,7 +9,7 @@
 
     <title><%= Config.game_name() %> Admin</title>
     <link rel="stylesheet" href="<%= static_path(@conn, "/css/admin.css") %>">
-    <link rel="stylesheet" href="<%= color_code_css_path(@conn) %>">
+    <link rel="stylesheet" href="<%= color_css_path(@conn) %>">
     <script src="<%= static_path(@conn, "/js/admin.js") %>"></script>
   </head>
 
