--- a/lib/web/templates/color/index.css.eex
+++ b/lib/web/templates/color/index.css.eex
@@ -57,6 +57,80 @@ body {
 <% end %>
 
 /**
+ * Base Colors
+ */
+
+.black {
+  color: #003541;
+  font-weight: bold;
+}
+
+.red {
+  color: #dc322f;
+  font-weight: bold;
+}
+
+.green {
+  color: #859900;
+  font-weight: bold;
+}
+
+.yellow {
+  color: #b58900;
+  font-weight: bold;
+}
+
+.blue {
+  color: #268bd2;
+  font-weight: bold;
+}
+
+.magenta {
+  color: #d33682;
+  font-weight: bold;
+}
+
+.cyan {
+  color: #2aa198;
+  font-weight: bold;
+}
+
+.white {
+  color: #eee8d5;
+  font-weight: bold;
+}
+
+.map-blue {
+  color: #005fd7;
+  font-weight: bold;
+}
+
+.map-brown {
+  color: #875f00;
+  font-weight: bold;
+}
+
+.map-dark-green {
+  color: #005f00;
+  font-weight: bold;
+}
+
+.map-green {
+  color: #00af00;
+  font-weight: bold;
+}
+
+.map-grey {
+  color: #9e9e9e;
+  font-weight: bold;
+}
+
+.map-light-grey {
+  color: #d0d0d0;
+  font-weight: bold;
+}
+
+/**
  * Custom colors
  */
 
