Save color config and load them in the CSS

--- a/lib/web/templates/admin/color_code/edit.html.eex
+++ b/lib/web/templates/admin/color_code/edit.html.eex
@@ -10,7 +10,7 @@
         <i class="fa fa-dashboard"></i> Home
       <% end %>
     </li>
-    <li><%= link("Color Codes", to: color_code_path(@conn, :index)) %></li>
+    <li><%= link("Colors", to: color_path(@conn, :index)) %></li>
     <li><%= @color_code.key %></li>
     <li class="active">Edit</li>
   </ol>
