--- a/lib/web/templates/session/new.html.eex
+++ b/lib/web/templates/session/new.html.eex
@@ -16,6 +16,7 @@
       <div class="actions">
         <%= submit "Sign In", class: "btn btn-primary btn-block btn-flat" %>
         <%= link("Create an account", to: public_registration_path(@conn, :new), class: "btn btn-secondary btn-block btn-flat") %>
+        <%= link("Forgot your password?", to: public_registration_reset_path(@conn, :new), class: "btn btn-block btn-flat") %>
       </div>
     <% end %>
   </div>
