--- a/lib/web/templates/account/show.html.eex
+++ b/lib/web/templates/account/show.html.eex
@@ -2,26 +2,44 @@
   <%= render("_sidebar.html", conn: @conn) %>
 
   <div class="col-md-4">
-    <h3>Change Password</h3>
+    <div class="row">
+      <div class="col-md-12">
+        <h3>Change Email</h3>
 
-    <%= form_tag public_account_path(@conn, :update), [method: :put] do %>
-      <div class="form-group has-feedback">
-        <%= label :user, :current_password, "Current Password" %>
-        <%= text_input :user, :current_password, type: "password", class: "form-control", placeholder: "Current Password" %>
+        <%= form_for @email_changeset, public_account_path(@conn, :update), [method: :put], fn f -> %>
+          <div class="form-group has-feedback">
+            <%= label f, :email %>
+            <%= text_input f, :email, class: "form-control", placeholder: "Email" %>
+          </div>
+
+          <%= submit "Update Email", class: "btn btn-primary btn-block btn-flat" %>
+        <% end %>
       </div>
+    </div>
+    <div class="row mt-3">
+      <div class="col-md-12">
+        <h3>Change Password</h3>
 
-      <div class="form-group has-feedback">
-        <%= label :user, :password %>
-        <%= text_input :user, :password, type: "password", class: "form-control", placeholder: "Password" %>
+        <%= form_tag public_account_path(@conn, :update), [method: :put] do %>
+          <div class="form-group has-feedback">
+            <%= label :user, :current_password, "Current Password" %>
+            <%= text_input :user, :current_password, type: "password", class: "form-control", placeholder: "Current Password" %>
+          </div>
+
+          <div class="form-group has-feedback">
+            <%= label :user, :password %>
+            <%= text_input :user, :password, type: "password", class: "form-control", placeholder: "Password" %>
+          </div>
+
+          <div class="form-group has-feedback">
+            <%= label :user, :password_confirmation, "Password Confirmation" %>
+            <%= text_input :user, :password_confirmation, type: "password", class: "form-control", placeholder: "Password Confirmation" %>
+          </div>
+
+          <%= submit "Update Password", class: "btn btn-primary btn-block btn-flat" %>
+        <% end %>
       </div>
-
-      <div class="form-group has-feedback">
-        <%= label :user, :password_confirmation, "Password Confirmation" %>
-        <%= text_input :user, :password_confirmation, type: "password", class: "form-control", placeholder: "Password Confirmation" %>
-      </div>
-
-      <%= submit "Update Password", class: "btn btn-primary btn-block btn-flat" %>
-    <% end %>
+    </div>
   </div>
 
   <div class="col-md-4">
