Use https link for exventure

--- a/lib/web/templates/layout/admin.html.eex
+++ b/lib/web/templates/layout/admin.html.eex
@@ -205,7 +205,7 @@
       </div>
 
       <footer class="main-footer">
-        Built with <%= link(ExVenture.version(), to: "http://exventure.org", target: "_blank") %>.
+        Built with <%= link(ExVenture.version(), to: "https://exventure.org", target: "_blank") %>.
       </footer>
     </div>
 
