--- a/lib/web/templates/layout/app.html.eex
+++ b/lib/web/templates/layout/app.html.eex
@@ -87,7 +87,7 @@
     <footer>
       <div class="container">
         <p class="text-muted">
-          Built with <%= link(ExVenture.version(), to: "http://exventure.org", target: "_blank") %>.
+          Built with <%= link(ExVenture.version(), to: "https://exventure.org", target: "_blank") %>.
         </p>
       </div>
     </footer>
