--- a/lib/web/templates/admin/class/index.html.eex
+++ b/lib/web/templates/admin/class/index.html.eex
@@ -45,7 +45,7 @@
             </tbody>
           </table>
 
-          <%= render(SharedView, "_pagination.html", path: class_path(@conn, :index), pagination: @pagination) %>
+          <%= SharedView.pagination(path: class_path(@conn, :index), pagination: @pagination, name: "classes") %>
         </div>
       </div>
     </div>
