--- a/lib/web/templates/admin/quest/index.html.eex
+++ b/lib/web/templates/admin/quest/index.html.eex
@@ -51,7 +51,7 @@
             </tbody>
           </table>
 
-          <%= render(SharedView, "_pagination.html", path: quest_path(@conn, :index), pagination: @pagination) %>
+          <%= SharedView.pagination(path: quest_path(@conn, :index), pagination: @pagination, name: "quests") %>
         </div>
       </div>
     </div>
