--- a/lib/web/templates/page/mudlet-package.xml.eex
+++ b/lib/web/templates/page/mudlet-package.xml.eex
@@ -4,7 +4,7 @@
     <TriggerPackage>
         <Trigger isActive="yes" isFolder="no" isTempTrigger="no" isMultiline="no" isPerlSlashGOption="no" isColorizerTrigger="no" isFilterTrigger="no" isSoundTrigger="no" isColorTrigger="no" isColorTriggerFg="no" isColorTriggerBg="no">
             <name>Login Trigger</name>
-            <script>sendGMCP(&quot;Core.Supports.Set [\&quot;Character.Vitals 1\&quot;, \&quot;Room.Info 1\&quot;, \&quot;Target.You 1\&quot;]&quot;)</script>
+            <script>sendGMCP(&quot;Core.Supports.Set [\&quot;Character.Vitals 1\&quot;, \&quot;Room.Info 1\&quot;, \&quot;Target.You 1\&quot;, \&quot;Channels.Broadcast 1\&quot;]&quot;)</script>
             <triggerType>0</triggerType>
             <conditonLineDelta>0</conditonLineDelta>
             <mStayOpen>0</mStayOpen>
@@ -120,6 +120,7 @@ end</script>
                     <script>-- Based off of https://forums.mudlet.org/viewtopic.php?t=4098
 
 local w,h = getMainWindowSize()
+setBorderRight(w / 4)
 setBorderBottom(h / 20)</script>
                     <eventHandlerList/>
                 </Script>
@@ -131,6 +132,14 @@ setBorderBottom(h / 20)</script>
 GUI.BackgroundCSS = CSSMan.new([[
   background-color: <%= Config.color_background() %>;
 ]])
+
+GUI.Right = Geyser.Label:new({
+  name = &quot;GUI.Right&quot;,
+  x = &quot;-25%&quot;, y = 0,
+  width = &quot;25%&quot;,
+  height = &quot;95%&quot;,
+})
+GUI.Right:setStyleSheet(GUI.BackgroundCSS:getCSS())
 
 GUI.Bottom = Geyser.Label:new({
   name = &quot;GUI.Bottom&quot;,
@@ -198,6 +207,32 @@ GUI.Move.front:setStyleSheet(GUI.GaugeFrontCSS:getCSS())
 GUI.Move.front:echo(&quot;Move Points&quot;)</script>
                     <eventHandlerList/>
                 </Script>
+                <Script isActive="yes" isFolder="no">
+                    <name>Chat Box</name>
+                    <packageName></packageName>
+                    <script>-- Based off of https://forums.mudlet.org/viewtopic.php?t=4098
+
+GUI.Sidebar = Geyser.HBox:new({
+  name = &quot;GUI.Sidebar&quot;,
+  x = 0, y = 0,
+  width = &quot;100%&quot;,
+  height = &quot;100%&quot;,
+}, GUI.Right)
+
+GUI.ChatBox = Geyser.MiniConsole:new({
+  name=&quot;ChatBox&quot;,
+  x=&quot;70%&quot;, y=&quot;50%&quot;,
+  wrapAt = 100,
+  fontSize = 16,
+  scrollBar = true,
+  width=&quot;30%&quot;, height=&quot;50%&quot;,
+}, GUI.Sidebar)
+GUI.ChatBox:setColor("<%= Config.color_background() %>")
+
+setFgColor("ChatBox", 255, 255, 255)
+setBgColor("ChatBox", 0, 43, 54)</script>
+                    <eventHandlerList/>
+                </Script>
             </ScriptGroup>
             <ScriptGroup isActive="yes" isFolder="yes">
                 <name>GMCP</name>
@@ -230,6 +265,18 @@ end</script>
 end</script>
                     <eventHandlerList>
                         <string>gmcp.Target.You</string>
+                    </eventHandlerList>
+                </Script>
+                <Script isActive="yes" isFolder="no">
+                    <name>channelsBroadcast</name>
+                    <packageName></packageName>
+                    <script>function channelsBroadcast()
+  local broadcast = gmcp.Channels.Broadcast
+  local message = string.format("[%s] %s says, \"%s\"", broadcast.channel, broadcast.from.name, broadcast.message)
+  GUI.ChatBox:echo(message .. "\n")
+end</script>
+                    <eventHandlerList>
+                        <string>gmcp.Channels.Broadcast</string>
                     </eventHandlerList>
                 </Script>
                 <Script isActive="yes" isFolder="no">
